[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["mesh_hydro_utils"]


[project]
name = "mesh_hydro_utils"
description="A collection of convenience utilities for the `mesh-hydro` and `hydro-playground` codes."
readme = "README.md"
version = "0.1.0"
authors= [
    { name = "Mladen Ivkovic", email="mladen.ivkovic@hotmail.com"},
    ]
license = { file = "LICENSE.txt" }
classifiers=[
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    ]
keywords = [
    "finite-volume-method",
    "cfd",
    "fluid-dynamics",
    "IO",
    ]
dependencies=[
    "matplotlib",
    "numpy",
    ]

[project.optional-dependencies]
hdf5 = ["h5py"]


[project.urls]
"Homepage" = "https://github.com/mladenivkovic/mesh_hydro_utils"



# ------------------------------------------------------------------------------
# bumpver: automatically bump package version.

[tool.bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"mesh_hydro_utils/__version__.py" = [
    '__version__ = "{version}"'
]

